crash logs removal

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 
 .DS_Store
 .vscode
+mono_crash*
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
